@@ -68,7 +68,7 @@ public class ContentSecurityPolicyScanRule extends PluginPassiveScanner
 
     private static final String HTTP_HEADER_XCSP = "X-Content-Security-Policy";
     private static final String HTTP_HEADER_WEBKIT_CSP = "X-WebKit-CSP";
-
+    private static final String FRAME_ANCESTORS = "frame-ancestors";
     // Per:
     // https://developers.google.com/web/fundamentals/security/csp#policy_applies_to_a_wide_variety_of_resources as of 20200618
     // 20250131 "base-uri" is not included. Per MDN if it isn't specified then the <base> value is
@@ -77,11 +77,11 @@ public class ContentSecurityPolicyScanRule extends PluginPassiveScanner
     // fallback, but excluding it does not necessarily make anything 'more' vulnerable, it's use
     // simply allows more detailed control of what embedded content can do.
     private static final List<String> DIRECTIVES_WITHOUT_FALLBACK =
-            List.of("form-action", "frame-ancestors");
+            List.of("form-action", FRAME_ANCESTORS);
 
     private static final List<String> ALLOWED_DIRECTIVES =
             List.of(
-                    // TODO: Remove once https://github.com/shapesecurity/salvation/issues/232 is
+                    // TODO: Remove once https://github.com/HtmlUnit/htmlunit-csp/issues/4 is
                     // addressed
                     "require-trusted-types-for", "trusted-types");
 
@@ -219,7 +219,7 @@ public class ContentSecurityPolicyScanRule extends PluginPassiveScanner
                 checkObservedErrors(metaObservedErrors, msg, metaPolicy, true);
                 List<String> metaWildcardSources = getAllowedWildcardSources(metaPolicy);
                 // frame-ancestors isn't applicable in META
-                metaWildcardSources.remove("frame-ancestors");
+                metaWildcardSources.remove(FRAME_ANCESTORS);
                 checkWildcardSources(metaWildcardSources, msg, metaPolicy, true);
                 PolicyInOrigin pol =
                         new PolicyInOrigin(parsedMetaPolicy, URI.parseURI(RAND_FQDN).orElse(null));
@@ -336,25 +336,32 @@ public class ContentSecurityPolicyScanRule extends PluginPassiveScanner
                 allowedWildcardSources.stream()
                         .distinct()
                         .filter(DIRECTIVES_WITHOUT_FALLBACK::contains)
-                        .collect(Collectors.toList());
-        String allowedWildcardSrcs = String.join(", ", allowedWildcardSources);
-        String wildcardSrcOtherInfo =
-                Constant.messages.getString(
-                        MESSAGE_PREFIX + "wildcard.otherinfo", allowedWildcardSrcs);
+                        .toList();
+        allowedWildcardSources.removeAll(DIRECTIVES_WITHOUT_FALLBACK);
         if (!allowedDirectivesWithoutFallback.isEmpty()) {
-            wildcardSrcOtherInfo +=
-                    Constant.messages.getString(
-                            "pscanrules.csp.otherinfo.extended",
-                            String.join(", ", allowedDirectivesWithoutFallback));
+            buildNofallbackAlert(
+                            isMeta
+                                    ? HttpFieldsNames.CONTENT_SECURITY_POLICY
+                                    : getHeaderField(msg, HttpFieldsNames.CONTENT_SECURITY_POLICY)
+                                            .get(0),
+                            csp,
+                            allowedDirectivesWithoutFallback)
+                    .raise();
         }
-        buildWildcardAlert(
-                        isMeta
-                                ? HttpFieldsNames.CONTENT_SECURITY_POLICY
-                                : getHeaderField(msg, HttpFieldsNames.CONTENT_SECURITY_POLICY)
-                                        .get(0),
-                        csp,
-                        wildcardSrcOtherInfo)
-                .raise();
+        if (!allowedWildcardSources.isEmpty()) {
+            String allowedWildcardSrcs = String.join(", ", allowedWildcardSources);
+            String wildcardSrcOtherInfo =
+                    Constant.messages.getString(
+                            MESSAGE_PREFIX + "wildcard.otherinfo", allowedWildcardSrcs);
+            buildWildcardAlert(
+                            isMeta
+                                    ? HttpFieldsNames.CONTENT_SECURITY_POLICY
+                                    : getHeaderField(msg, HttpFieldsNames.CONTENT_SECURITY_POLICY)
+                                            .get(0),
+                            csp,
+                            wildcardSrcOtherInfo)
+                    .raise();
+        }
     }
 
     private static boolean allowsUnsafeHashes(Policy policy, FetchDirectiveKind source) {
@@ -466,7 +473,7 @@ public class ContentSecurityPolicyScanRule extends PluginPassiveScanner
             allowedSources.add("frame-src");
         }
         if (checkPolicy(pol::allowsFrameAncestor)) {
-            allowedSources.add("frame-ancestors");
+            allowedSources.add(FRAME_ANCESTORS);
         }
         if (checkPolicy(pol::allowsFont)) {
             allowedSources.add("font-src");
@@ -689,6 +696,19 @@ public class ContentSecurityPolicyScanRule extends PluginPassiveScanner
                 .setDescription(Constant.messages.getString(MESSAGE_PREFIX + "both.desc"));
     }
 
+    private AlertBuilder buildNofallbackAlert(
+            String param, String evidence, List<String> directives) {
+        return getBuilder(Constant.messages.getString(MESSAGE_PREFIX + "nofallback.name"), "13")
+                .setDescription(Constant.messages.getString(MESSAGE_PREFIX + "nofallback.desc"))
+                .setRisk(Alert.RISK_MEDIUM)
+                .setParam(param)
+                .setEvidence(evidence)
+                .setOtherInfo(
+                        Constant.messages.getString(
+                                MESSAGE_PREFIX + "nofallback.otherinfo",
+                                String.join(", ", directives)));
+    }
+
     @Override
     public List<Alert> getExampleAlerts() {
         List<Alert> alerts = new ArrayList<>();
@@ -750,6 +770,12 @@ public class ContentSecurityPolicyScanRule extends PluginPassiveScanner
                                         + "fonts.gstatic.com; frame-ancestors 'none'; worker-src 'self'; form-action 'none'")
                         .build());
         alerts.add(buildBothAlert().build());
+        alerts.add(
+                buildNofallbackAlert(
+                                HttpFieldsNames.CONTENT_SECURITY_POLICY,
+                                "connect-src *; default-src 'self'; form-action 'none'",
+                                List.of(FRAME_ANCESTORS))
+                        .build());
         return alerts;
     }
 
